// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four - small 1`] = `
Array [
  <Text
    allowFontScaling={false}
  >
    lead
  </Text>,
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-3
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-4
    </Text>
  </View>,
]
`;

exports[`2. lead one and four - smalltablet 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      lead
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-3
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-4
    </Text>
  </View>
</View>
`;

exports[`3. lead one and four - medium 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      lead
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-3
    </Text>
    <View />
    <Text
      allowFontScaling={false}
    >
      support-4
    </Text>
  </View>
</View>
`;
